# animation-studio

./: .env.development  .env.production  .gitignore  manifest.ts  next.config.mjs  out  package-lock.json  package.json  robots.txt  tailwind.config.js  translations.csv  tsconfig.json  your-lenis-file
mithril-backend/: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  nginx-config-example.conf  pyproject.toml  requirements.txt
mithril-backend/app/: __init__.py  config.py  main.py
mithril-backend/app/api/: deps.py
mithril-backend/app/api/routes/: admin.py  anime_bg.py  bg_jobs.py  credits.py  health.py  i2v_storyboard_jobs.py  id_converter_jobs.py  image_jobs.py  jobs.py  krea_style_converter_jobs.py  (+12 more)
mithril-backend/app/core/: __init__.py  errors.py  rate_limiter.py  retry.py  state_machine.py
mithril-backend/app/models/: __init__.py  job.py  provider.py
mithril-backend/app/providers/: __init__.py  base.py  modelslab_video.py  registry.py  sora.py  veo3.py  wan_video.py  xai_video.py
mithril-backend/app/services/: __init__.py  credits.py  firestore.py  image_processor.py  monitoring.py  panorama.py  renderer_3d.py  renderer_3dgs.py  s3.py
mithril-backend/app/workers/: __init__.py  broker.py  tasks.py
mithril-backend/docs/: FRONTEND_INTEGRATION.md
mithril-backend/scripts/: seed_credits.py  test_phase2.py  test_phase3.py  test_phase4.py  test_setup.py
mithril-backend/tests/: README.md  conftest.py  test_core.py  test_job_flow.py  test_providers.py
(+1051 files in other folders)
